log
Thu 14 Sep 2023 04:58:19 PM UTC: 
 tests:  1|8
total_score: 0/70
d9b30b0
Thu 14 Sep 2023 05:35:13 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:8: error: ‘TreeNode’ has no member named ‘root’
   45 |     new->root = NULL;
      |        ^~
treemap.c:46:8: error: ‘TreeNode’ has no member named ‘lower_than’
   46 |     new->lower_than = lower_than;
      |        ^~
treemap.c:47:10: error: ‘map’ undeclared (first use in this function)
   47 |   return map;
      |          ^~~
treemap.c:47:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d077ada
Thu 14 Sep 2023 05:35:46 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:19: error: initialization of ‘TreeMap *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
   40 |   TreeMap * new = (TreeNode *)malloc(sizeof(TreeNode));
      |                   ^
treemap.c:47:10: error: ‘map’ undeclared (first use in this function)
   47 |   return map;
      |          ^~~
treemap.c:47:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bd929db
Thu 14 Sep 2023 05:35:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:47:10: error: ‘map’ undeclared (first use in this function)
   47 |   return map;
      |          ^~~
treemap.c:47:10: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
943e10a
Thu 14 Sep 2023 05:36:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
604592a
Thu 14 Sep 2023 05:47:42 PM UTC: 
 treemap.c | 31 ++++++++++++++++++++++++++-----
 1 file changed, 26 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   54 |   return NULL;
      |          ^~~~
treemap.c:52:6: note: declared here
   52 | void insertTreeMap(TreeMap * tree, void* key, void * value)
      |      ^~~~~~~~~~~~~
treemap.c: In function ‘searchTreeMap’:
treemap.c:93:33: error: expected ‘;’ before ‘}’ token
   93 |         current = current->right
      |                                 ^
      |                                 ;
   94 |       }
      |       ~                          
treemap.c:97:32: error: expected ‘;’ before ‘}’ token
   97 |         current = current->left
      |                                ^
      |                                ;
   98 |       }
      |       ~                         
treemap.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
  100 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3eae240
Thu 14 Sep 2023 05:47:57 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   54 |   return NULL;
      |          ^~~~
treemap.c:52:6: note: declared here
   52 | void insertTreeMap(TreeMap * tree, void* key, void * value)
      |      ^~~~~~~~~~~~~
treemap.c: In function ‘searchTreeMap’:
treemap.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
  100 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
699f4fa
Thu 14 Sep 2023 05:48:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
  100 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c468574
Thu 14 Sep 2023 05:49:20 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|7
total_score: 5/70
68de27f
Thu 14 Sep 2023 05:52:23 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|7
total_score: 5/70
52373f2
